# TradingApp

./: .gitignore  CMakeLists.txt  README.md
source/llbase/: CMakeLists.txt  lfqueue.h  logging.h  macros.h  mcast_socket.cpp  mcast_socket.h  mempool.h  sockets.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  threading.h  timekeeping.h
source/traderco/: CMakeLists.txt  traderco_main.cpp
source/traderco/client/data/: market_data_consumer.cpp  market_data_consumer.h
source/traderco/client/networking/: order_gateway_client.cpp  order_gateway_client.h
source/traderco/client/orders/: te_order.h  te_order_book.cpp  te_order_book.h
source/traderco/client/trading/: feature_engine.h  liquidity_taker.cpp  liquidity_taker.h  market_maker.cpp  market_maker.h  om_order.h  order_manager.cpp  order_manager.h  position_manager.h  risk_manager.cpp  risk_manager.h  trading_engine.cpp  trading_engine.h
source/traderco/common/: config.h  types.h
source/traderco/exchange/: exchange_server.cpp  exchange_server.h
source/traderco/exchange/data/: market_data_publisher.cpp  market_data_publisher.h  ome_client_request.h  ome_client_response.h  ome_market_update.h  snapshot_synthesizer.cpp  snapshot_synthesizer.h
source/traderco/exchange/networking/: fifo_sequencer.h  order_gateway_server.cpp  order_gateway_server.h
source/traderco/exchange/orders/: ome_order.h  ome_order_book.cpp  ome_order_book.h  order_matching_engine.cpp  order_matching_engine.h
tests/: test_client_order_book.cpp  test_exchange_order_book.cpp  test_exchange_server.cpp  test_lfqueue.cpp  test_logging.cpp  test_market_data_consumer.cpp  test_market_data_publisher.cpp  test_mcast_socket.cpp  test_mempool.cpp  test_order_gateway_client.cpp  test_order_gateway_server.cpp  test_order_manager.cpp  test_order_matching_engine.cpp  test_risk_manager.cpp  test_sockets.cpp  test_tcp_server.cpp  test_tcp_socket.cpp  test_threads.cpp  test_trading_algorithms.cpp  test_trading_engine.cpp  test_trading_positions.cpp
